test stabilization